[package]
name = "cv1811-sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devices = { path = "../devices" }
bit-struct = "0.3.2"
logging = { path = "../logging" }
frame_allocator = { path = "../frame_allocator" }